Fix casing in class name and update button text for clarity

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <section id="game">
         <div class="gameContainer">
             <h1>Number Guesser Game | Errate die Zahl</h1>
-            <div class="gameContainer_input">
+            <div class="gameContainer_Input">
                 <input type="text" id="guessInput" placeholder="Enter your guess ( 1-100 )" />
-                <button id="guessButton" onclick="guessNumber()">Guess</button>
+                <button id="guessButton" onclick="guessNumber()">Guess/ Errate</button>
             </div>
             <div class="gameContainer_Result">
                 <div id="result"></div>
